Done, to be tested:
---------------------------
* fixed TSA stuff

ToDo
---------------------
* GUI for SwitchToUser
* Console SuRun support
* Create a "Default" SuRunner for users that are not in "SuRunners"
* GUI for FUS
* Checksums for "Always Yes" programs
* Windows 7 compatibility
  Explorer is started via DCOM explorer.exe /FACTORY,{...
* LOG-File for SuRun activity

To be done in future:
---------------------
* Use Radio-Buttons for (normal/elevated) Auto-Magic
* Hide/Show all context menu entries consistently
* make all context menu entries dynamically with ShellExt 
  (E.g.: msi with popup-menu)

Deferred Whishlist:
---------------------
* icons for SuRuns context menu entries
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------

SuRun 1.2.0.7 Beta 14 - 2009-08-31:
-----------------------------------
* CHG: Less annoying Balloon Tips
* FIX: Tray icon status did not update while limited user program were active
* FIX: Removed temp user account. This lead to wrong user names in WhoAmI etc.
* CHG: SuRun needs to logon every user as administrator who uses "Start as 
  Administrator". The only way to get that done right is to put that user 
  temporarily into "Administrators". This leads to the problem, that SuRun 
  normally would need to know (and save!) the password of that user. To avoid 
  that for users who are not joined to a domain, SuRun does the following:
  * create backup of the user's password hash
  * create a new random password for the user
  * put the user to the Administrators group
  * logon the user (this get's the token for "Start as administrator")
  * remove the user from the administrators group
  * restore the saved password hash
  This is safe because: