@@ -3,6 +3,6 @@
 DWORD WINAPI TSAThreadProc(void* p);
 
 void InitTrayShowAdmin();
-BOOL ProcessTrayShowAdmin(BOOL bBalloon);
+BOOL ProcessTrayShowAdmin(BOOL bShowTray,BOOL bBalloon);
 void CloseTrayShowAdmin();
 BOOL StartTSAThread();
